--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -7,4 +7,6 @@ spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.format_sql=true
 
+customer.ribbon.listOfServers=http://localhost:8080
+
 logging.level.org.hibernate.SQL= debug
