--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -6,4 +6,6 @@ spring.datasource.driver-class-name= org.postgresql.Driver
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=create-drop
 
+customer.ribbon.listOfServers=${ENDPOINT_CUSTOMER}
+
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
