properties & docker compose Update
local test 관련 설정 변경

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/springboot
+spring.datasource.url=jdbc:postgresql://localhost:5433/springboot
 spring.datasource.username=postgres
 spring.datasource.password=1234
 spring.datasource.driver-class-name= org.postgresql.Driver
@@ -7,6 +7,6 @@ spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.format_sql=true
 
-customer.ribbon.listOfServers=http://localhost:8080
-
 logging.level.org.hibernate.SQL= debug
+
+server.port=7070
