--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-server.port=7070
-spring.profiles.active=local
+customer.ribbon.listOfServers=${ENDPOINT_CUSTOMER}
+logistics.ribbon.listOfServers=${ENDPOINT_LOGISTICS}
