--- a/build.gradle
+++ b/build.gradle
@@ -25,14 +25,16 @@ dependencies {
 	implementation "org.springframework.cloud:spring-cloud-starter-openfeign"
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
-	runtimeOnly 'com.h2database:h2'
 	runtimeOnly 'org.postgresql:postgresql'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation "org.testcontainers:testcontainers:1.17.3"
+	testImplementation "org.testcontainers:junit-jupiter:1.17.3"
+	testImplementation "org.testcontainers:postgresql:1.17.3"
 }
 
 dependencyManagement {
 	imports {
-		mavenBom "org.springframework.cloud:spring-cloud-dependencies:2021.0.1"
+		mavenBom "org.springframework.cloud:spring-cloud-dependencies:2021.0.4"
 	}
 }
 
